@@ -675,3 +675,11 @@
 2012-02-23  Cedric Bail
 
 	* Remove Software SDL engine.
+
+2012-01-23  Tom Hacohen (TAsn)
+
+	* Textblock: Replaced evas_object_textblock_style_user_set/get
+	with evas_object_textblock_style_user_push/peek/pop.
+	This is used to override the default style set for an evas object.
+	For example, this can be used to nicely change the font and size
+	in a text editor.
